@@ -1,6 +1,4 @@
 ## Makefile.am
-AUTOMAKE_OPTIONS = 1.10.1 dist-zip dist-bzip2 dist-lzma subdir-objects
-
 lib_LTLIBRARIES = liburiparser.la
 check_PROGRAMS = test/uriparser_test
 TESTS = test/uriparser_test
