@@ -1,6 +1,6 @@
 AC_PREREQ(2.61)
 AC_INIT([uriparser], [0.6.3])
-AM_INIT_AUTOMAKE([1.9 foreign])
+AM_INIT_AUTOMAKE([1.10.1 foreign dist-zip dist-bzip2 dist-lzma subdir-objects])
 AM_CONFIG_HEADER(test/CppTest/config.h)
 
 
